# formful

./: MANIFEST.in  README.md  schema.py  setup.cfg  setup.py
src/formful/: __init__.py  behavior.py  form.py  i18n.py  schema.py  utils.py  validators.py
src/formful/fields/: __init__.py  boolean.py  core.py  date.py  file.py  form.py  list.py  meta.py  number.py  select.py  simple.py  string.py
src/formful/widgets/: __init__.py  boolean.py  color.py  core.py  date.py  file.py  form.py  list.py  meta.py  number.py  select.py  string.py
tests/: conftest.py  test_widgets.py
tests/fields/: test_boolean.py  test_custom.py  test_date.py  test_datetime.py  test_datetimelocal.py  test_decimal.py  test_defaults.py  test_field.py  test_file.py  test_filters.py  test_flags.py  test_float.py  test_form.py  test_hidden.py  test_html5.py  test_integer.py  test_label.py  test_list.py  test_month.py  test_password.py  test_radio.py  test_select.py  test_selectmultiple.py  test_string.py  test_submit.py  test_textarea.py  test_time.py
